<resources>
    <string name="app_name">MyPuig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="opcion_compartir">Compartir</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_fav">Favoritos</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_alert">Alertas</string>
    <string name="menu_account">Perfil</string>
    <string name="menu_about">Acerca de </string>
    <string name="menu_help">Ayuda</string>
    <string name="fecha">Fecha</string>
    <string name="mensaje">Mensaje</string>
    <string name="tema">Tema</string>
    <string name="autor">Autor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filtrar_por">Filtrar por...</string>
    <string name="profesorTitle">Profesor</string>
    <string name="PreviewProfesor">Todos</string>
    <string name="PreviewFecha">todas</string>
    <string name="PreviewEtiqueta">todas</string>
    <string name="etiquetaTitle">Etiqueta</string>
    <string name="fechaTitle">Fecha</string>
    <string name="ordenar_por">Ordenar por...</string>
    <string name="ordenar_por2">Ordenar por</string>
    <string name="nombre_z_a">Nombre, Z-A</string>
    <string name="nombre_a_z">Nombre, A-Z</string>
    <string name="fecha_nuevo_a_viejo">Fecha, nuevo a viejo</string>
    <string name="de">de</string>
    <string name="nueva_b_squeda">Nueva búsqueda</string>
    <string name="compartir">Compartir</string>
    <string name="chat">Chat</string>
    <string name="iconcompartir">iconCompartir</string>
    <string name="icon_chat">icon chat</string>
    <string name="borrar_favorito">borrar favorito</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje...</string>
    <string name="mensajepropio">MensajePropio</string>
    <string name="image">Image</string>
    <string name="ejemplos_profes">Oscar Torrente, Victor Carceler, DAM, ASIX, formació</string>
    <string name="m_vil">Móvil</string>
    <string name="email">Email</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="contacto">Contacto</string>
    <string name="localidad">Localidad</string>
    <string name="administraci_n_de_cuentas">ADMINISTRACIÓN DE CUENTAS</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="todav_a_no_tienes_cuenta">Todavía no tienes cuenta ?</string>
    <string name="crea_tu_cuenta">CREA TU CUENTA</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="inicia_sesi_n_aqu">Inicia sesión aquí</string>
    <string name="accesible">la herramienta más inteligente en su bolsillo, conecte sus cuentas una única vez y nosotros hacemos el trabajo duro</string>
    <string name="comparte">la herramienta más inteligente en su bolsillo, conecte sus cuentas una única vez y nosotros hacemos el trabajo duro</string>
    <string name="fiable">la herramienta más inteligente en su bolsillo, conecte sus cuentas una única vez y nosotros hacemos el trabajo duro</string>
    <string name="comencemos">la herramienta más inteligente en su bolsillo, conecte sus cuentas una única vez y nosotros hacemos el trabajo duro</string>
    <string name="guardar_cambios">Guardar Cambios</string>


</resources>
