<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    app:contentPaddingBottom="8dp"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppBar"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewFechaCortaFav"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:text="@string/fecha"
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textViewMensajeCortoFav"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:text="@string/mensaje"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textViewFechaCortaFav"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemaFav" />

        <TextView
            android:id="@+id/textViewAutorFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewFechaCortaFav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxFav2"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:button="@drawable/fav_checkbox"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewTemaFav"
            app:layout_constraintStart_toStartOf="@+id/textViewFechaCortaFav"
            app:layout_constraintTop_toBottomOf="@+id/textViewFechaCortaFav"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTemaFav"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:text="@string/tema"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textViewFechaCortaFav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAutorFav" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewMensajeCortoFav"
            tools:layout_editor_absoluteX="8dp">

            <Button
                android:id="@+id/buttonCompartir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/compartir"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonChat"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="32dp"
                android:text="@string/chat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonCompartir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="80dp"
            android:contentDescription="@string/iconcompartir"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:srcCompat="@drawable/ic_share"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMensajeCortoFav"
            app:srcCompat="@drawable/ic_chat"
            android:tint="@color/white"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/icon_chat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>