<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    app:contentPaddingBottom="8dp"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppBar"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewFechaCorta"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/fecha"
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textViewMensajeCorto"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/mensaje"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textViewFechaCorta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTema" />

        <TextView
            android:id="@+id/textViewAutor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/autor"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewFechaCorta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxFav"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:button="@drawable/fav_checkbox"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewTema"
            app:layout_constraintStart_toStartOf="@+id/textViewFechaCorta"
            app:layout_constraintTop_toBottomOf="@+id/textViewFechaCorta"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTema"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/tema"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textViewFechaCorta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAutor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>