<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:squint="http://schemas.android.com/apk/res-auto"
    tools:context=".DetalleNoticiaFragment">

    <com.intrusoft.squint.DiagonalView
        android:id="@+id/diagonal"
        android:layout_width="411dp"
        android:layout_height="218dp"
        android:scaleType="centerCrop"
        android:src="@color/colorAccent"
        squint:angle="20"
        squint:diagonalDirection="left_to_right"
        squint:gravity="right"
        squint:layout_constraintEnd_toEndOf="parent"
        squint:layout_constraintHorizontal_bias="1.0"
        squint:layout_constraintStart_toStartOf="parent"
        squint:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        squint:layout_constraintBottom_toBottomOf="parent"
        squint:layout_constraintEnd_toEndOf="parent"
        squint:layout_constraintStart_toStartOf="parent"
        squint:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewMensajeDetalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mensaje"
                squint:layout_constraintBottom_toBottomOf="parent"
                squint:layout_constraintEnd_toEndOf="parent"
                squint:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/TextViewFechaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="334dp"
                tools:layout_editor_absoluteY="175dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textViewTemaDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tema"
        android:textSize="24sp"
        squint:layout_constraintStart_toStartOf="parent"
        squint:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="de"
        squint:layout_constraintStart_toStartOf="parent"
        squint:layout_constraintTop_toBottomOf="@+id/textViewTemaDetalle" />

    <TextView
        android:id="@+id/textViewAutorDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/autor"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        squint:layout_constraintStart_toEndOf="@+id/textViewDe"
        squint:layout_constraintTop_toBottomOf="@+id/textViewTemaDetalle" />

</androidx.constraintlayout.widget.ConstraintLayout>