<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment"
    android:background="#81CCDC">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/floatLabeledEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#3570E0"
        app:layout_constraintBottom_toTopOf="@+id/floatLabeledEditText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#3570E0"
            app:backgroundTint="#3570E0" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/floatLabeledEditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#3570E0"
        app:layout_constraintBottom_toTopOf="@+id/floatLabeledEditText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatLabeledEditText2"
        tools:targetApi="lollipop">

        <EditText
            android:id="@+id/editTextUsuarioRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_bold"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColorHint="#3570E0"
            app:backgroundTint="#3570E0" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <!-- add some padding -->
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/floatLabeledEditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatLabeledEditText3">

        <EditText
            android:id="@+id/editTextContraseñaRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_bold"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColorHint="#3570E0"
            app:backgroundTint="#3570E0" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#E63570E0"
        app:layout_constraintBottom_toTopOf="@+id/textViewTodavía_no_tienes_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatLabeledEditText4" />

    <TextView
        android:id="@+id/textViewTodavía_no_tienes_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/inicia_sesi_n_aqu"
        android:textColor="#1B1B1B"
        app:layout_constraintEnd_toStartOf="@+id/textViewCreaTuCuenta"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrarse"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarse" />

</androidx.constraintlayout.widget.ConstraintLayout>